Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.3
  FEATURES:
    * Trackaction buttons are now available in the label for the current track
    * Bookmark button is now available in the Current Track applet.

  CHANGES:
    * The visibility of columns in the new File Browser is now configurable.
    * Toolbar: "Skip icons", prev/next labels are aligned to the edges
    * Volume Dial: Gradient indicator and pointing cursor hint above the dial ring
    * Playlist layout editor: When copying a layout, set its current name as
      the default one for the copy. Thanks to Jakub Wieczorek <faw217@gmail.com>.
    * Set Media Keys as default global shortcuts for playlist navigation.
      (BR 194259)
    * Deleting files from the File Browser is now asynchronous.
    * Copy/Move/Organize operations now display detailed progress information.
    * Copy/Move/Organize operations can now be canceled. 
    * Port Copy/Move to Collection actions to the new File Browser.
    * Script-Updater: Only check for updates if 7 days have passed since the 
      last check.

  BUGFIXES:
    * Fixed time labels getting truncated in the slim toolbar. (BR 195935)
    * Fixed broken keyboard navigation in the playlist after activating a track. 
      (BR 225791) 
    * Workaround broken Jamendo url redirects. (BR 221922)
    * MainToolbar labels: watch changes of metadata & queue (BR 227439 & BR 227362)
    * MainToolbar labels: avoid empty strings (BR 228042)
    * MainToolbar timelabel: show progressing time for stream (BR 227598)
    * Playlist layout editor: Disable "rename" button for default playlist layouts. 
      Thanks to Jakub Wieczorek <faw217@gmail.com>.
    * Playlist layout editor: When reating a copy of a default layout, add copy
      to layout list imediately. Thanks to Jakub Wieczorek <faw217@gmail.com>.
    * Compilations do not become normal albums when renaming them. (BR 192029)