@@ -26,8 +26,14 @@ class PlaylistsByProviderProxy : public QtGroupingProxy
 {
     Q_OBJECT
     public:
-        static QByteArray encodeMimeRows( QList<int> rowList );
-        static QList<int> decodeMimeRows( QByteArray data );
+        /** serializes the indexes into a bytearray
+          */
+        QByteArray encodeMimeRows( const QList<QModelIndex> indexes ) const;
+
+        /** \arg data serialized data
+          * \model this model is used to get the indexes.
+          */
+        QList<QModelIndex> decodeMimeRows( QByteArray data, QAbstractItemModel *model ) const;
         static const QString AMAROK_PROVIDERPROXY_INDEXES;
 
         PlaylistsByProviderProxy( QAbstractItemModel *model, int column );
